--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,13 @@
 [metadata]
 description-file = README.md
+
+[aliases]
+test=pytest
+
+[tool:pytest]
+addopts = --cov-report term-missing --cov-report html:coverage --cov=. --cov-config=setup.cfg
+
+[coverage:report]
+omit =
+    tests/*
+    setup.py
